<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".total">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Titulototal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Titulo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.136" />

        <TextView
            android:id="@+id/plato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plato"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.301"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Titulototal"
            app:layout_constraintVertical_bias="0.114" />

        <TextView
            android:id="@+id/cantidadplato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.543"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plato"
            app:layout_constraintVertical_bias="0.029" />

        <TextView
            android:id="@+id/bebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bebida"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.236"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plato"
            app:layout_constraintVertical_bias="0.172" />

        <TextView
            android:id="@+id/cantidadbebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.543"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bebida"
            app:layout_constraintVertical_bias="0.018" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bebida"
            app:layout_constraintVertical_bias="0.186" />

        <TextView
            android:id="@+id/numeroplato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toEndOf="@+id/cantidadplato"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.306" />

        <TextView
            android:id="@+id/numerobebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toEndOf="@+id/cantidadbebida"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.446" />

        <TextView
            android:id="@+id/numerototal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="224dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/total"
            app:layout_constraintTop_toBottomOf="@+id/precio2" />

        <TextView
            android:id="@+id/precioPlatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:layout_marginTop="16dp"
            android:text="@string/precioTotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cantidadplato" />

        <TextView
            android:id="@+id/precioBebidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:layout_marginTop="16dp"
            android:text="@string/precioTotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cantidadbebida" />

        <TextView
            android:id="@+id/precio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/precioPlatos"
            app:layout_constraintTop_toBottomOf="@+id/numeroplato" />

        <TextView
            android:id="@+id/precio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/precioBebidas"
            app:layout_constraintTop_toBottomOf="@+id/numerobebida" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>